--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
+    "bulma-checkradio": "^1.1.1",
     "classnames": "^2.2.6",
+    "firebase": "^8.1.2",
     "formik": "^2.1.4",
     "gatsby": "^2.19.45",
+    "gatsby-env-variables": "^2.0.0",
     "gatsby-image": "^2.4.6",
     "gatsby-plugin-react-helmet": "^3.3.3",
+    "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-s3": "^0.3.3",
     "gatsby-plugin-sass": "^2.2.0",
     "gatsby-plugin-sharp": "^2.6.10",
@@ -37,7 +41,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-select": "^3.1.0",
-    "sharp": "^0.25.3"
+    "sharp": "^0.25.3",
+    "yup": "^0.32.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
